--- a/backend/package.json
+++ b/backend/package.json
@@ -13,11 +13,14 @@
   "dependencies": {
     "backend": "file:",
     "body-parser": "^1.20.3",
+    "child_process": "^1.0.2",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
+    "ffmpeg-static": "^5.2.0",
     "nodemon": "^3.1.7",
     "twilio": "^5.3.4",
-    "uuid": "^10.0.0"
+    "uuid": "^10.0.0",
+    "ws": "^8.18.0"
   }
 }
