--- a/twilio-device-call-transcribe/package.json
+++ b/twilio-device-call-transcribe/package.json
@@ -1,19 +1,23 @@
 {
   "dependencies": {
+    "@deepgram/sdk": "^3.9.0",
+    "buffer": "^6.0.3",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
     "nodemon": "^3.1.7",
     "twilio": "^5.3.5",
     "twilio-device-call-transcribe": "file:",
-    "uuid": "^10.0.0"
+    "uuid": "^10.0.0",
+    "ws": "^8.18.0"
   },
   "name": "twilio-device-call-transcribe",
   "version": "1.0.0",
   "main": "client.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon server.js"
+    "start": "nodemon server.js",
+    "wss": "nodemon transcriptionService.js"
   },
   "keywords": [],
   "author": "",
