--- a/backend/package.json
+++ b/backend/package.json
@@ -21,6 +21,8 @@
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
     "ffmpeg-static": "^5.2.0",
+    "helmet": "^8.0.0",
+    "https": "^1.0.0",
     "nodemon": "^3.1.7",
     "twilio": "^5.3.4",
     "uuid": "^10.0.0",
